deployments/.k8s/swiply/user-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user
spec:
  host: user
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
