deployments/.k8s/swiply/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swiply-vs
spec:
  hosts:
    - "*"
  gateways:
    - swiply-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: user
            port:
              number: 80
    - match:
        - port: 84
      route:
        - destination:
            host: user
            port:
              number: 84
